# cpp_project_template

./: .gitignore  CMakeLists.txt
cmake/: Conan.cmake
libs/Math/: CMakeLists.txt  Factorial.cpp  Factorial.hpp
libs/Math/test/: CMakeLists.txt  test.cpp
src/: CMakeLists.txt  func.cpp  func.hpp  main.cpp
test/: CMakeLists.txt  func.cpp  test.cpp
